@@ -876,9 +876,6 @@ end_typedef
 begin_macro
 name|QT_END_INCLUDE_NAMESPACE
 end_macro
-begin_comment
-comment|// This logic must match the one in qmetatype.h
-end_comment
 begin_if
 if|#
 directive|if
@@ -891,30 +888,6 @@ begin_typedef
 DECL|typedef|qreal
 typedef|typedef
 name|QT_COORD_TYPE
-name|qreal
-typedef|;
-end_typedef
-begin_elif
-elif|#
-directive|elif
-name|defined
-argument_list|(
-name|QT_NO_FPU
-argument_list|)
-operator|||
-name|defined
-argument_list|(
-name|Q_PROCESSOR_ARM
-argument_list|)
-operator|||
-name|defined
-argument_list|(
-name|Q_OS_WINCE
-argument_list|)
-end_elif
-begin_typedef
-typedef|typedef
-name|float
 name|qreal
 typedef|;
 end_typedef
